--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==3.0.3
 django-dotenv==1.4.2
 django-heroku==0.3.1
+django-static-ionicons==2.0.1.2
 gunicorn==20.0.4
 psycopg2==2.8.4
 public==2019.4.13
