--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ Django==3.0.3
 django-dotenv==1.4.2
 django-heroku==0.3.1
 django-static-ionicons==2.0.1.2
+django-webpack-loader==0.7.0
 gunicorn==20.0.4
+Pillow==7.2.0
 psycopg2==2.8.4
 public==2019.4.13
 python-dotenv==0.12.0
