--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,13 @@ botocore==1.17.39
 dj-database-url==0.5.0
 Django==3.0.3
 django-appconf==1.0.4
-django-crispy-forms==1.9.2
 django-dotenv==1.4.2
 django-heroku==0.3.1
-django-image-cropping==1.4.0
+django-resized==0.3.11
 django-static-ionicons==2.0.1.2
 django-storages==1.9.1
 django-webpack-loader==0.7.0
 docutils==0.15.2
-easy-thumbnails==2.7
 gunicorn==20.0.4
 jmespath==0.10.0
 Pillow==7.2.0
