--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.0.3
 django-appconf==1.0.4
 django-dotenv==1.4.2
 django-heroku==0.3.1
+django-react-templatetags==6.0.0
 django-resized==0.3.11
 django-static-ionicons==2.0.1.2
 django-storages==1.9.1
@@ -20,6 +21,7 @@ python-dateutil==2.8.1
 python-dotenv==0.12.0
 pytz==2019.3
 query-string==2019.4.13
+rjsmin==1.1.0
 s3transfer==0.3.3
 six==1.14.0
 sqlparse==0.3.0
