--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 asgiref==3.2.3
-boto3==1.14.39
-botocore==1.17.39
 dj-database-url==0.5.0
 Django==3.0.3
 django-appconf==1.0.4
@@ -8,18 +6,19 @@ django-dotenv==1.4.2
 django-heroku==0.3.1
 django-resized==0.3.11
 django-static-ionicons==2.0.1.2
-django-storages==1.9.1
 docutils==0.15.2
 gunicorn==20.0.4
 jmespath==0.10.0
 Pillow==7.2.0
+pkg-resources==0.0.0
+psycopg2==2.8.4
 public==2019.4.13
 python-dateutil==2.8.1
+python-decouple==3.3
 python-dotenv==0.12.0
 pytz==2019.3
 query-string==2019.4.13
 rjsmin==1.1.0
-s3transfer==0.3.3
 six==1.14.0
 sqlparse==0.3.0
 urllib3==1.25.10
