--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.3
 dj-database-url==0.5.0
 Django==3.0.3
 django-appconf==1.0.4
+django-crispy-forms==1.9.2
 django-dotenv==1.4.2
 django-heroku==0.3.1
 django-resized==0.3.11
